# projektcpppk

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Display.cpp  Display.h  ISerializable.cpp  ISerializable.h  Ksiazka.cpp  Ksiazka.h  README.md  Raport.h  Serializable.cpp  Serializable.h  Uzytkownik.cpp  Uzytkownik.h  compile_commands.json  main.cpp  serializable.cpp  serializable.h  storeClassList.cpp  storeClassList.h
.github/workflows/: c-cpp.yml  cpp-linter.yaml
data/: Serializable.cpp  Serializable.h
src/: Klient.cpp  Klient.h  docs.md  main.cpp  util.cpp  util.h
src/Serializer/: ISerializable.cpp  ISerializable.h  Serializable.cpp  Serializable.h  Token.cpp  Token.h  storeClassList.cpp  storeClassList.h
tests/: bootstrap.cpp  test_Serializer.cpp  test_Serializer.h  test_util.h
